3. Вынести чувствительную информацию в отдельный проперти файл (исправлен - вынесена вся чувствительная информация) 4. Переделать тесты так, чтоб во время тестов использовалась in memory БД (H2), а не PostgreSQL.(исправлен - создано 2 бина)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,20 +9,19 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - ./prod.env
+      - sensitive-data.env
     depends_on:
       - db
       - nginx
     networks:
       - backend
   db:
-
     container_name: db
     image: postgres:latest
     ports:
       - "5432:5432"
     env_file:
-      - ./prod.env
+      - sensitive-data.env
     networks:
       - backend
 
